refactor(api): standardize responses with response struct
