# server/docs/swagger.json
@@ -48,10 +48,22 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/anres.ChampionBrief"
-                            }
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/anres.ChampionBrief"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -103,7 +115,7 @@
         },
         "/champion": {
             "get": {
-                "description": "请求一个英雄详情 @name,version,loc,mode",
+                "description": "query @name,version,loc,mode",
                 "consumes": [
                     "application/json"
                 ],
@@ -152,7 +164,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/anres.ChampionDetail"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/anres.ChampionDetail"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -160,7 +184,7 @@
         },
         "/item": {
             "get": {
-                "description": "请求一个物品详情 @version,lang",
+                "description": "query @version,lang",
                 "consumes": [
                     "application/json"
                 ],
@@ -201,7 +225,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/riotmodel.ItemDTO"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/riotmodel.ItemDTO"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -209,7 +245,7 @@
         },
         "/summoner": {
             "get": {
-                "description": "请求一个召唤师详情 @name,loc",
+                "description": "query @name,loc",
                 "consumes": [
                     "application/json"
                 ],
@@ -242,7 +278,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.SummonerDTO"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.SummonerDTO"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     }
                 }
@@ -600,6 +648,18 @@
                 "tripleKills": {
                     "description": "三杀数",
                     "type": "integer"
+                }
+            }
+        },
+        "response.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "msg": {
+                    "type": "string"
                 }
             }
         },
